--- a/WindowsForms/AddEventForm.resx
+++ b/WindowsForms/AddEventForm.resx
@@ -117,4 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAPpJREFUaEPt
+        2eEJwkAYg+GO4miO4AjdoCu4iW5WL+ZD8DBY5YyCeeBAtH1L6E+niBhnXdelnZPpLPXYsVr40I7bvh4/
+        TovObFvN9fhxEGXbKkMkRNm2yhAJUbatMkRClG2rDJEQZdsqQyRE2bbKEAlRtq0yREKUbasMkRBl2ypD
+        JETZtsoQCVG2rTJEQpRtqwyREGXbKkMkRNm2yhAJUbatMkRClG2rDJEQZdvqZ4Yc29nVwedXfX3IdUDd
+        eoPv6retvjbk4YAerqlrn7EP2TSgh3vqXuUjQ/Zs33lrQA+NavXG/z0NLYy3cm5nyIAemtXGM8a/jYi/
+        NU0XtY5ee5IhGL0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAltJREFUaEPt
+        mYFRwkAQRSnBEizBDrQDKYEOoBPtQDqADrQD7EA60A7wf/ZnDUeikLuFgHkzOxPvLv/fMnuXSxwNDPSQ
+        zWZzg3hEvCBeEStEBa/Zxj6OudFt/QGTekAsEMfCe+4kcz4wiVsEf+FcqHEr2dMC4zHik7MoBLXGkj8N
+        MJxurZtZI54RLDcvG16rjX0c08ZUt8QCo5n57fGGeNCwP+FY3dPETMNigAHLqYnOxrzXJPaIKTMIc2Gn
+        a+ILkb3rUENadehVfgOA6Hwrv0uxrZNaJrnDXN1lgCDrOaV4HVPTpHco95yB2NI0nTd1FYfaZuEs1ZUH
+        hHjsSDl4dzoWapvFD+rKAzrpTrVWVxj0MCsnfweDSLrIn9UVBj3Myslf9BBJazasrCroYVZO/pqESP0o
+        TsJPq/QwK2elru5IyFFzOLJz1Nwd6ThqDkd2jpq7A413k3LOUVr5OyVErmax92H7zfeESPpA/FBXGPQw
+        K6fIA/HsRxRQ5osLhNJD46u6ikNts3DKHeUhdh3HeALB6Berph+rzBG+DkT5qtv0OpqdDDWkVYdeMV8j
+        Idz28aHzJxzeaxJ7LDQkBhi0ffXgIj32c1C6sFNeNDwGGLQlQ/gMeELcI7zseK029qXPid8IT4Zllq6Z
+        KMKT4QbQtJsdCzX+0olNhsCEZZM+NA+Bk/d1pb9/Iz4ZAiMeZ1hynBBPzfVXAJYh23ggnCAat1a09yOZ
+        EmCyQzK9BJMdkuklmOy/Smaiof0Hk21Lpuz/UU4BJ21zdy4viQpO3nK44CQqkMTlrImB62E0+gYFiHhH
+        hh/k9gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAiNJREFUaEPt
+        mYFxwjAMRRmBERiBDdoR2KAdgQ3aDcoGsAFs0G4AG8AG7Qb0/0Thro1TS47ihJ7fnQ5ILMk6JFtOZoVC
+        oWDmer0uIS+QPeQI+Q2v8R7HLEVtGmBCC8gb5AyxQh3qLsRcfuB8DtlCvKCtuZjPAxyuIJ/07gxtrsTN
+        sMCR57/QxVbc+QPjTCUWai7oyz/VxHBu9uLeBxjMkU5dbGQa/YAhFvbY9FsAYIB1McTqZIVzSK8XKO8q
+        M9NgJ9OyAUXu2H24QD7qr27YOwAobWrdJE6QKhXw+Vhd8cFe+FBK6Z3ILYiG+rILZzGpAwrsYlMIBfFa
+        3fFD3zVjcIrzUBDP1R1f1mI+DgYfah01uYIgB3ERB4NDh6IucgZBjuImjihoaAVBcI0rlUUYOG2pEDdx
+        ZLyGVhCpwJZ63xKVODJew78JhLUUSq0HozxB1HUpbuJgrDpfQSsY/B6y2E/iJg4GW5ffnMGYlt+UDTFX
+        MKYNMbVFCQUzXotCoMA2PIVQMF5cxKQeKPVp42/B4JMbnhdJbXzfgxWPAe/1VzfSHq1CcUpH3fSnKVDm
+        w4evysy4cA4/6s4MDNz/46AGGBozxXwe0DXAoHW390C/i2uBUdZLzmDoq19d/AWM50gz33TqAo64AAyx
+        mtFmnhc9DXDIVPP8d9hJDJdKMeCcHQAnkdKbUYe6470MDYEJsWteQ1ioocMZr/Eex0zr9XShULgHZrNv
+        q0DMA3l0YjUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>133, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>39</value>
+  </metadata>
 </root>
